init nav and begin header section

--- a/index.html
+++ b/index.html
@@ -4,9 +4,49 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CSS Grid Landing Page</title>
+
+    <link
+      href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+      rel="stylesheet"
+      integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN"
+      crossorigin="anonymous"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Indie+Flower&family=Roboto:wght@300;700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="assets/css/style.css" />
   </head>
   <body>
-    <div class="grid"></div>
+    <!-- Container Wrapper Begin -->
+    <div class="container">
+      <!-- Nav Begin -->
+      <nav class="nav">
+        <a class="nav-brand" href="/"> Lift Fit</a>
+        <ul class="nav-list">
+          <li class="nav-item">
+            <a class="nav-link" href="/">Locations</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/">Classes</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/">Training</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/">Gear</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-fill-item" href="/">Join Now</a>
+          </li>
+        </ul>
+        <!-- Nav End -->
+      </nav>
+
+      <!-- Header Section Begin -->
+      <header class="header"></header>
+      <!-- Header End -->
+    </div>
+    <!-- Container Wrapper End -->
   </body>
 </html>
