--- a/index.html
+++ b/index.html
@@ -19,57 +19,160 @@
   <body>
     <!-- Container Begin -->
     <div class="container">
-      <!-- Side Menu Begin -->
-      <div class="menu">
-        <div class="link active"><i class="fas fa-chart-pie"></i>Dashboard</div>
-        <div class="link"><i class="fas fa-chart-line"></i>Reports</div>
-        <div class="link"><i class="fas fa-dollar-sign"></i>Orders</div>
-        <div class="link"><i class="fas fa-warehouse"></i>Inventory</div>
-        <div class="link"><i class="fas fa-cog"></i>Settings</div>
-      </div>
-      <!-- Side Menu End -->
-      <!-- Dashboard Begin -->
-      <div class="dashboard">
-        <!-- Header Begin -->
-        <div class="header">
-          <h1><i class="fas fa-angle-right"></i>Dashboard</h1>
-          <p>High level overview of your business</p>
+      <!-- Nav Begin -->
+      <nav class="nav">
+        <ul class="nav-list">
+          <li class="nav-item"><a href="#">Portfolio</a></li>
+          <li class="nav-item"><a href="#">Locations</a></li>
+          <li class="nav-item"><a href="#">Services</a></li>
+          <li class="nav-item"><a href="#">Contact</a></li>
+        </ul>
+      </nav>
+      <!-- Nav End -->
+      <!-- Top Container Begin -->
+      <section class="top-container">
+        <div class="portfolio">
+          <h1>Portfolio</h1>
+          <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Debitis
+            similique perferendis eaque illum excepturi id repellendus eveniet
+            quo! Amet, temporibus!
+          </p>
+          <button class="btn">See More</button>
         </div>
-        <!-- Header End -->
-        <!-- Char Begin -->
-        <div class="chart">
-          <div class="title"><h3>Sales Figures</h3></div>
+        <div class="locations">
+          <h3>Location Shoots</h3>
+          <p>Destination shoots all around the world</p>
+          <button class="btn">See More</button>
         </div>
-        <!-- Char End -->
-        <!-- 3 Even Columns Begin -->
-        <div class="cards">
-          <div class="card">
-            <h3>Todays Message</h3>
+        <div class="card services">
+          <i class="fas fa-cog"></i>
+          <h3>Services</h3>
+          <p>From pre to post, choose from variety of options</p>
+          <button class="btn">See More</button>
+        </div>
+        <div class="card contact">
+          <i class="fas fa-envelope"></i>
+          <h3>Contact Me</h3>
+          <p>From pre to post, choose from variety of options</p>
+          <button class="btn">See More</button>
+        </div>
+      </section>
+      <!-- Top Container Begin -->
+      <!-- Testomonials Begin -->
+      <section class="testomonials">
+        <div class="testomonial">
+          <blockquote>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam
-              doloremque excepturi ex perferendis ratione perspiciatis sint eius
-              illo, magnam maiores fugit inventore impedit consequatur error
-              dolor quasi voluptas? Rerum molestias fugiat modi quasi asperiores
-              architecto aperiam quas quam ullam laborum reiciendis veritatis
-              ducimus labore atque non, blanditiis sapiente minus quod?
+              <i class="fas fa-quote-right"></i>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur,
+              et voluptates obcaecati iusto deserunt recusandae laborum
+              voluptatum optio, cum nihil accusamus nulla. Ab, eius aperiam.
             </p>
-          </div>
-          <div class="card">
-            <h3>Order Alert</h3>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores
-              cum corporis unde, quidem iure deleniti vitae quasi accusamus
-              atque debitis.
-            </p>
-            <button>See Orders</button>
-          </div>
-          <div class="card">
-            <h3>Todays Figures</h3>
-          </div>
+            <footer>— Angus Young</footer>
+          </blockquote>
         </div>
-        <!-- 3 Even Columns End -->
-      </div>
-      <!-- Dashboar End-->
+        <div class="testomonial">
+          <blockquote>
+            <p>
+              <i class="fas fa-quote-right"></i>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi
+              assumenda placeat eius, vel optio, quas cum reiciendis
+              necessitatibus, minus fuga perferendis! Odit est labore commodi?
+            </p>
+            <footer>— Bon Scott</footer>
+          </blockquote>
+        </div>
+
+        <div class="testomonial">
+          <blockquote>
+            <p>
+              <i class="fas fa-quote-right"></i>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur,
+              et voluptates obcaecati iusto deserunt recusandae laborum
+              voluptatum optio, cum nihil accusamus nulla. Ab, eius aperiam.
+            </p>
+            <footer>— Malcom Young</footer>
+          </blockquote>
+        </div>
+      </section>
+      <!-- Testomonials End -->
+      <!-- Portfolio Begin -->
+      <section class="gallery">
+        <h2>Gallery</h2>
+        <button class="btn">See More</button>
+        <div class="gallery-imgs">
+          <img
+            src="https://source.unsplash.com/random/200x200"
+            alt="unsplash stock photo"
+          />
+          <img
+            src="https://source.unsplash.com/random/201x200"
+            alt="unsplash stock photo"
+          />
+          <img
+            src="https://source.unsplash.com/random/202x200"
+            alt="unsplash stock photo"
+          />
+          <img
+            src="https://source.unsplash.com/random/203x200"
+            alt="unsplash stock photo"
+          />
+          <img
+            src="https://source.unsplash.com/random/204x200"
+            alt="unsplash stock photo"
+          />
+          <img
+            src="https://source.unsplash.com/random/205x200"
+            alt="unsplash stock photo"
+          />
+          <img
+            src="https://source.unsplash.com/random/206x200"
+            alt="unsplash stock photo"
+          />
+          <img
+            src="https://source.unsplash.com/random/207x200"
+            alt="unsplash stock photo"
+          />
+          <img
+            src="https://source.unsplash.com/random/208x200"
+            alt="unsplash stock photo"
+          />
+          <img
+            src="https://source.unsplash.com/random/209x200"
+            alt="unsplash stock photo"
+          />
+        </div>
+      </section>
+      <!-- Portfolio End -->
+      <!-- Footer Begin -->
+      <footer class="footer">
+        <div class="footer-container f-one">
+          <ul>
+            <li id="first-child">Contact Information</li>
+            <li>123 W. Maple Dr</li>
+            <li>555-1234</li>
+            <li>photos@photostudio.com</li>
+          </ul>
+        </div>
+        <div class="footer-container f-two">
+          <ul>
+            <li id="first-child">Top Locations</li>
+            <li>Australia</li>
+            <li>London</li>
+            <li>San Diego</li>
+          </ul>
+        </div>
+        <div class="footer-container f-three">
+          <ul>
+            <li id="first-child">FAQ</li>
+            <li>Pricing</li>
+            <li>Equipment</li>
+            <li>Hours</li>
+          </ul>
+        </div>
+      </footer>
+      <!-- Footer End -->
     </div>
     <!-- Container End -->
   </body>
